--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-spring": "^8.0.20",
-    "styled-components": "^4.2.1"
+    "styled-components": "^4.2.1",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
