--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.21",
+    "nuka-carousel": "^4.5.9",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
