--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.8.3",
     "gatsby-image": "^2.1.2",
     "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-nprogress": "^2.1.2",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-postcss": "^2.1.2",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.2",
@@ -15,7 +16,6 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.0.38",
     "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.21",
