--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "nuka-carousel": "^4.5.9",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-awesome-slider": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-parallax": "^2.2.0",
+    "react-slick": "^0.24.0",
     "react-spring": "^8.0.27",
     "styled-components": "^4.2.1",
     "typescript": "^3.5.3"
